--- a/index.html
+++ b/index.html
@@ -415,9 +415,9 @@
   <!-- HERO -->
   <section class="hero" aria-label="Hero">
     <!-- Reemplaza con tu video o imagen -->
-    <!-- VIDEO DE REFERENCIA: assets/hero.mp4 | POSTER: assets/hero-poster.jpg -->
-    <video src="assets/hero.mp4" poster="assets/hero-poster.jpg" autoplay muted loop playsinline></video>
-    <!-- Alternativa si no usas video: <img src="assets/hero-bg.jpg" alt="Jugadores disfrutando SkyGolf de noche"/> -->
+    <!-- VIDEO DE REFERENCIA: /hero.mp4 | POSTER: /hero-poster.jpg -->
+    <video src="/hero.mp4" poster="/hero-poster.jpg" autoplay muted loop playsinline></video>
+    <!-- Alternativa si no usas video: <img src="/hero-bg.jpg" alt="Jugadores disfrutando SkyGolf de noche"/> -->
     <div class="hero__content container">
       <span class="badge">Golf • Comida • Música</span>
       <h1>Golf y diversión para todos</h1>
@@ -436,7 +436,7 @@
       <p class="section__desc">Instalaciones modernas, bahías climatizadas y juegos con sensores para apuntar a dianas luminosas. Ideal para principiantes y jugadores expertos.</p>
       <div class="grid grid--3">
         <article class="card">
-          <img class="card__media" src="assets/experiencia-1.jpg" alt="Bahías de juego con tecnología" />
+          <img class="card__media" src="/experiencia-1.jpg" alt="Bahías de juego con tecnología" />
           <div class="card__body">
             <span class="eyebrow">Tecnología</span>
             <h3>Bahías con rastreo de tiros</h3>
@@ -444,7 +444,7 @@
           </div>
         </article>
         <article class="card">
-          <img class="card__media" src="assets/experiencia-2.jpg" alt="Grupo de amigos disfrutando" />
+          <img class="card__media" src="/experiencia-2.jpg" alt="Grupo de amigos disfrutando" />
           <div class="card__body">
             <span class="eyebrow">Para todos</span>
             <h3>Diversión sin experiencia previa</h3>
@@ -452,7 +452,7 @@
           </div>
         </article>
         <article class="card">
-          <img class="card__media" src="assets/experiencia-3.jpg" alt="Ambiente nocturno con luces" />
+          <img class="card__media" src="/experiencia-3.jpg" alt="Ambiente nocturno con luces" />
           <div class="card__body">
             <span class="eyebrow">Ambiente</span>
             <h3>Noches con luces y música</h3>
@@ -541,9 +541,9 @@
 
       <!-- Beneficios -->
       <div class="grid grid--3" style="margin-top:18px">
-        <div class="card"><img class="card__media" src="assets/empresas.jpg" alt="Evento corporativo" /><div class="card__body"><h3>Eventos corporativos</h3><p>Salas privadas, packs de comida y host dedicado para tu equipo.</p></div></div>
-        <div class="card"><img class="card__media" src="assets/cumpleanos.jpg" alt="Cumpleaños" /><div class="card__body"><h3>Cumpleaños y celebraciones</h3><p>Paquetes para grupos con decoración y torta opcional.</p></div></div>
-        <div class="card"><img class="card__media" src="assets/membresias.jpg" alt="Tarjeta de membresía" /><div class="card__body"><h3>Membresías</h3><p>Descuentos, horas preferentes y eventos exclusivos para socios.</p></div></div>
+        <div class="card"><img class="card__media" src="/empresas.jpg" alt="Evento corporativo" /><div class="card__body"><h3>Eventos corporativos</h3><p>Salas privadas, packs de comida y host dedicado para tu equipo.</p></div></div>
+        <div class="card"><img class="card__media" src="/cumpleanos.jpg" alt="Cumpleaños" /><div class="card__body"><h3>Cumpleaños y celebraciones</h3><p>Paquetes para grupos con decoración y torta opcional.</p></div></div>
+        <div class="card"><img class="card__media" src="/membresias.jpg" alt="Tarjeta de membresía" /><div class="card__body"><h3>Membresías</h3><p>Descuentos, horas preferentes y eventos exclusivos para socios.</p></div></div>
       </div>
     </div>
 
@@ -627,19 +627,19 @@
       <p class="section__desc">Platos para compartir, opciones chilenas con giro internacional y cocteles de autor.</p>
       <div class="menu">
         <div class="menu__item">
-          <img src="assets/menu-burger.jpg" alt="Burger especial" />
+          <img src="/menu-burger.jpg" alt="Burger especial" />
           <h4>Burger SkyGolf</h4>
           <p class="price">$9.900</p>
           <p>Carne, queso cheddar, cebolla caramelizada y salsa de la casa.</p>
         </div>
         <div class="menu__item">
-          <img src="assets/menu-papas.jpg" alt="Papas crujientes" />
+          <img src="/menu-papas.jpg" alt="Papas crujientes" />
           <h4>Papas crujientes</h4>
           <p class="price">$5.900</p>
           <p>Con mezcla de especias y alioli de merkén.</p>
         </div>
         <div class="menu__item">
-          <img src="assets/menu-pisco.jpg" alt="Pisco sour de autor" />
+          <img src="/menu-pisco.jpg" alt="Pisco sour de autor" />
           <h4>Pisco Sour de la casa</h4>
           <p class="price">$6.500</p>
           <p>Clásico chileno con un twist cítrico.</p>
@@ -656,15 +656,15 @@
       <p class="section__desc">Torneos, noches temáticas y música en vivo.</p>
       <div class="events">
         <article class="event">
-          <img class="event__media" src="assets/evento-noches.jpg" alt="Noches con luces" />
+          <img class="event__media" src="/evento-noches.jpg" alt="Noches con luces" />
           <div class="event__body"><h3>Noches de luces LED</h3><p>Todos los viernes desde las 20:00</p></div>
         </article>
         <article class="event">
-          <img class="event__media" src="assets/evento-torneo.jpg" alt="Torneo SkyGolf" />
+          <img class="event__media" src="/evento-torneo.jpg" alt="Torneo SkyGolf" />
           <div class="event__body"><h3>Torneo SkyGolf</h3><p>Próximo: 15 de noviembre</p></div>
         </article>
         <article class="event">
-          <img class="event__media" src="assets/evento-live.jpg" alt="Música en vivo" />
+          <img class="event__media" src="/evento-live.jpg" alt="Música en vivo" />
           <div class="event__body"><h3>Música en vivo</h3><p>Sábados seleccionados</p></div>
         </article>
       </div>
@@ -696,8 +696,8 @@
         <h2 class="section__title" style="margin-bottom:8px">Dónde estamos</h2>
         <p class="section__desc">Encuéntranos en Santiago. Estacionamiento y acceso a transporte público.</p>
         <!-- Reemplaza el src del iframe por tu mapa embebido -->
-        <!-- MAPA DE REFERENCIA: assets/mapa.jpg (si no usas embed) -->
-        <img src="assets/mapa.jpg" alt="Mapa de ubicación" />
+        <!-- MAPA DE REFERENCIA: /mapa.jpg (si no usas embed) -->
+        <img src="/mapa.jpg" alt="Mapa de ubicación" />
         <!-- Ejemplo con iframe (Google Maps):
         <iframe title="Mapa SkyGolf Chile" src="https://www.google.com/maps/embed?pb=TU_EMBED" width="100%" height="360" style="border:0;border-radius:16px" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
       </div>
