--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
   <section class="hero" aria-label="Hero">
     <!-- Reemplaza con tu video o imagen -->
     <!-- VIDEO DE REFERENCIA: /hero.mp4 | POSTER: /hero-poster.jpg -->
-    <video src="/hero.mp4" poster="/hero-poster.jpg" autoplay muted loop playsinline></video>
+    <video src="hero.mp4" poster="/hero-poster.jpg" autoplay muted loop playsinline></video>
     <!-- Alternativa si no usas video: <img src="/hero-bg.jpg" alt="Jugadores disfrutando SkyGolf de noche"/> -->
     <div class="hero__content container">
       <span class="badge">Golf • Comida • Música</span>
