--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SkyGolf Chile — Diversión para todos</title>
-  <meta name="description" content="SkyGolf en Chile: golf, comida y diversión para todos. Reserva tu experiencia, descubre nuestro menú y organiza tu evento." />
+  <title>Terraza Golf Chile — Diversión para todos</title>
+  <meta name="description" content="Terraza Golf en Chile: golf, comida y diversión para todos. Reserva tu experiencia, descubre nuestro menú y organiza tu evento." />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root{
@@ -397,7 +397,7 @@
     <div class="container nav">
       <a class="brand" href="#">
         <span class="brand__logo" aria-hidden="true"></span>
-        <span>SkyGolf Chile</span>
+        <span>Teraza Golf</span>
       </a>
       <nav aria-label="Principal">
         <ul>
@@ -417,11 +417,11 @@
     <!-- Reemplaza con tu video o imagen -->
     <!-- VIDEO DE REFERENCIA: hero.mp4 | POSTER: hero-poster.jpg -->
     <video src="hero.mp4" poster="hero-poster.jpg" autoplay muted loop playsinline></video>
-    <!-- Alternativa si no usas video: <img src="hero-bg.jpg" alt="Jugadores disfrutando SkyGolf de noche"/> -->
+    <!-- Alternativa si no usas video: <img src="hero-bg.jpg" alt="Jugadores disfrutando Terraza Golf de noche"/> -->
     <div class="hero__content container">
       <span class="badge">Golf • Comida • Música</span>
       <h1>Golf y diversión para todos</h1>
-      <p>Vive la experiencia SkyGolf en Chile: tecnología de juego, coctelería y gastronomía para amigos, familias y empresas. No necesitas experiencia previa.</p>
+      <p>Vive la experiencia Terraza Golf en Chile: tecnología de juego, coctelería y gastronomía para amigos, familias y empresas. No necesitas experiencia previa.</p>
       <div class="actions">
         <a class="cta" href="#reservas">Reservar ahora</a>
         <a class="pill" href="#experiencia">Ver experiencia</a>
@@ -432,7 +432,7 @@
   <!-- EXPERIENCIA -->
   <section id="experiencia">
     <div class="container">
-      <h2 class="section__title">La experiencia SkyGolf</h2>
+      <h2 class="section__title">La experiencia Terraza Golf</h2>
       <p class="section__desc">Instalaciones modernas, bahías climatizadas y juegos con sensores para apuntar a dianas luminosas. Ideal para principiantes y jugadores expertos.</p>
       <div class="grid grid--3">
         <article class="card">
@@ -628,7 +628,7 @@
       <div class="menu">
         <div class="menu__item">
           <img src="menu-burger.jpg" alt="Burger especial" />
-          <h4>Burger SkyGolf</h4>
+          <h4>Burger Terraza Golf</h4>
           <p class="price">$9.900</p>
           <p>Carne, queso cheddar, cebolla caramelizada y salsa de la casa.</p>
         </div>
@@ -660,8 +660,8 @@
           <div class="event__body"><h3>Noches de luces LED</h3><p>Todos los viernes desde las 20:00</p></div>
         </article>
         <article class="event">
-          <img class="event__media" src="evento-torneo.jpg" alt="Torneo SkyGolf" />
-          <div class="event__body"><h3>Torneo SkyGolf</h3><p>Próximo: 15 de noviembre</p></div>
+          <img class="event__media" src="evento-torneo.jpg" alt="Torneo Terraza Golf" />
+          <div class="event__body"><h3>Torneo Terraza Golf</h3><p>Próximo: 15 de noviembre</p></div>
         </article>
         <article class="event">
           <img class="event__media" src="evento-live.jpg" alt="Música en vivo" />
@@ -699,7 +699,7 @@
         <!-- MAPA DE REFERENCIA: mapa.jpg (si no usas embed) -->
         <img src="mapa.jpg" alt="Mapa de ubicación" />
         <!-- Ejemplo con iframe (Google Maps):
-        <iframe title="Mapa SkyGolf Chile" src="https://www.google.com/maps/embed?pb=TU_EMBED" width="100%" height="360" style="border:0;border-radius:16px" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+        <iframe title="Mapa Terraza Golf Chile" src="https://www.google.com/maps/embed?pb=TU_EMBED" width="100%" height="360" style="border:0;border-radius:16px" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
       </div>
       <div class="contact__card">
         <h2 class="section__title" style="margin-bottom:8px">Contacto</h2>
@@ -709,14 +709,14 @@
           <textarea name="mensaje" rows="4" placeholder="Cuéntanos qué necesitas"></textarea>
           <button class="cta" type="submit">Enviar</button>
         </form>
-        <p class="section__desc" style="margin-top:10px">También puedes escribirnos a <a href="mailto:contacto@skygolf.cl">contacto@skygolf.cl</a> o llamarnos al <a href="tel:+56212345678">+56 2 1234 5678</a>.</p>
+        <p class="section__desc" style="margin-top:10px">También puedes escribirnos a <a href="mailto:contacto@terrazagolf.cl">contacto@terrazagolf.cl</a> o llamarnos al <a href="tel:+56212345678">+56 2 1234 5678</a>.</p>
       </div>
     </div>
   </section>
 
   <footer>
     <div class="container" style="display:flex;justify-content:space-between;gap:14px;flex-wrap:wrap">
-      <p>© <span id="year"></span> SkyGolf Chile. Todos los derechos reservados.</p>
+      <p>© <span id="year"></span> Terraza Golf Chile. Todos los derechos reservados.</p>
       <p><a href="#">Términos</a> • <a href="#">Privacidad</a> • <a href="#">Preguntas frecuentes</a></p>
     </div>
   </footer>
