--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     <div class="container nav">
       <a class="brand" href="#">
         <span class="brand__logo" aria-hidden="true"></span>
-        <span>Teraza Golf</span>
+        <span>Terraza Golf</span>
       </a>
       <nav aria-label="Principal">
         <ul>
