--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
             <div class="form-field">
               <label for="sucursal">Sucursal</label>
               <select id="sucursal" name="sucursal" aria-label="Sucursal">
-                <option value="vitacura">Vitacura</option>
+                <option value="quilicura">Quilicura</option>
                 <option value="la_florida">La Florida</option>
               </select>
             </div>
