--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
       <div class="grid grid--3" style="margin-top:18px">
         <div class="card"><img class="card__media" src="empresas.jpg" alt="Evento corporativo" /><div class="card__body"><h3>Eventos corporativos</h3><p>Salas privadas, packs de comida y host dedicado para tu equipo.</p></div></div>
         <div class="card"><img class="card__media" src="cumpleanos.jpg" alt="Cumpleaños" /><div class="card__body"><h3>Cumpleaños y celebraciones</h3><p>Paquetes para grupos con decoración y torta opcional.</p></div></div>
-        <div class="card"><img class="card__media" src="membresias.jpg" alt="Tarjeta de membresía" /><div class="card__body"><h3>Membresías</h3><p>Descuentos, horas preferentes y eventos exclusivos para socios.</p></div></div>
+        <div class="card"><img class="card__media" src="clases.jpg" alt="Trackman" /><div class="card__body"><h3>Reserva de Clases</h3><p>Aprende desde cero con un profesor especializado.</p></div></div>
       </div>
     </div>
 
